2013-09-11  Anton Kolesov <akolesov@synopsys.com>

	* dejagnu/baseboard/arc-nsim.exp: Correct configuration for GDB testsuite
	on nSIM.

2013-09-10  Anton Kolesov <akolesov@synopsys.com>

	* dejagnu/baseboard/arc-nsim.exp: Do not use status wrapper (testglue) for
	Dejagnu tests.
	* dejagnu/nsim-extra.exp: Remove custom copy of gdb_comm_load() function.

2013-09-09	Anton Kolesov <akolesov@synopsys.com>

	* README.md: Mention that Git tags should be used to obtain stable
	releases.

2013-09-04	Anton Kolesov <akolesov@synopsys.com>

	* arc-external.sh: New file to download external dependencies.
	* build-all.sh: New option --[no-]external-download.

2013-09-03  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* arc-versions.sh: Only use Linux if --uclibc is set (new
	argument)
	* build-all.sh: Pass uclibc argument to arc-versions.sh

2013-09-03  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* build-all.sh: Only check for Linux directory with if uClibc is
	being built.

2013-08-29  Vineet Gupta <vgupta@synopsys.com>

	* arc-versions.sh: Update uClibc branch name to new naming convention.

2013-08-24  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* build-all.sh: Eliminate dependency on bash extensions when
	testing for pre-set environment variables.

2013-08-23  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* build-kernel.sh: Move use of all relevant env variables to after
	define-release.sh.

2013-08-20  Simon Cook  <simon.cook@embecosm.com>

	* arc-versions.sh: Update branch names to new naming convention.

2013-08-14 Anton Kolesov   <akolesov@synopsys.com>

	* build-all.sh: Unset some environment variables for example CROSS_COMPILE
	and ARCH. Tools makefiles recognize these variable and might use them in
	an undesirable way. For example CROSS_COMPILE has a predence over
	toolchain we are building and this for example might cause a big endian
	toolchain to have little endian standard libraries.

2013-07-12  Jeremy Bennett  <jeremy.bennett@embecosm.com>
